@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2010-04-20"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20100420
-#define RUBY_PATCHLEVEL 253
+#define RUBY_PATCHLEVEL 254
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
